# serializer version: 1
# name: test_auto_on_off
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GS01234 Auto on/off',
      'icon': 'mdi:alarm',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gs01234_auto_on_off',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_auto_on_off.1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.gs01234_auto_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alarm',
    'original_name': 'Auto on/off',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'auto_on_off',
    'unique_id': 'GS01234_auto_on_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_auto_on_off.2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'GS01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'GS3 AV',
    'name': 'GS01234',
    'name_by_user': None,
    'serial_number': 'GS01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_main
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GS01234 Main',
      'icon': 'mdi:power',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gs01234_main',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_main.1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.gs01234_main',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:power',
    'original_name': 'Main',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'main',
    'unique_id': 'GS01234_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_main.2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'GS01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'GS3 AV',
    'name': 'GS01234',
    'name_by_user': None,
    'serial_number': 'GS01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_prebrew[GS3 AV]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GS01234 Prebrew',
      'icon': 'mdi:water',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gs01234_prebrew',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_prebrew[GS3 AV].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.gs01234_prebrew',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Prebrew',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'prebrew',
    'unique_id': 'GS01234_prebrew',
    'unit_of_measurement': None,
  })
# ---
# name: test_prebrew[GS3 AV].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'GS01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'GS3 AV',
    'name': 'GS01234',
    'name_by_user': None,
    'serial_number': 'GS01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_prebrew[Linea Mini]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LM01234 Prebrew',
      'icon': 'mdi:water',
    }),
    'context': <ANY>,
    'entity_id': 'switch.lm01234_prebrew',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_prebrew[Linea Mini].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.lm01234_prebrew',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Prebrew',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'prebrew',
    'unique_id': 'LM01234_prebrew',
    'unit_of_measurement': None,
  })
# ---
# name: test_prebrew[Linea Mini].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'LM01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'Linea Mini',
    'name': 'LM01234',
    'name_by_user': None,
    'serial_number': 'LM01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_prebrew[Micra]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'MR01234 Prebrew',
      'icon': 'mdi:water',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mr01234_prebrew',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_prebrew[Micra].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mr01234_prebrew',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Prebrew',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'prebrew',
    'unique_id': 'MR01234_prebrew',
    'unit_of_measurement': None,
  })
# ---
# name: test_prebrew[Micra].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'MR01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'Linea Micra',
    'name': 'MR01234',
    'name_by_user': None,
    'serial_number': 'MR01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_preinfusion[GS3 AV]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GS01234 Preinfusion',
      'icon': 'mdi:water',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gs01234_preinfusion',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_preinfusion[GS3 AV].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.gs01234_preinfusion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Preinfusion',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'preinfusion',
    'unique_id': 'GS01234_preinfusion',
    'unit_of_measurement': None,
  })
# ---
# name: test_preinfusion[GS3 AV].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'GS01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'GS3 AV',
    'name': 'GS01234',
    'name_by_user': None,
    'serial_number': 'GS01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_preinfusion[Linea Mini]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'LM01234 Preinfusion',
      'icon': 'mdi:water',
    }),
    'context': <ANY>,
    'entity_id': 'switch.lm01234_preinfusion',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_preinfusion[Linea Mini].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.lm01234_preinfusion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Preinfusion',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'preinfusion',
    'unique_id': 'LM01234_preinfusion',
    'unit_of_measurement': None,
  })
# ---
# name: test_preinfusion[Linea Mini].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'LM01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'Linea Mini',
    'name': 'LM01234',
    'name_by_user': None,
    'serial_number': 'LM01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_preinfusion[Micra]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'MR01234 Preinfusion',
      'icon': 'mdi:water',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mr01234_preinfusion',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_preinfusion[Micra].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mr01234_preinfusion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water',
    'original_name': 'Preinfusion',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'preinfusion',
    'unique_id': 'MR01234_preinfusion',
    'unit_of_measurement': None,
  })
# ---
# name: test_preinfusion[Micra].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'MR01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'Linea Micra',
    'name': 'MR01234',
    'name_by_user': None,
    'serial_number': 'MR01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
# name: test_steam_boiler_enable
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GS01234 Steam boiler',
      'icon': 'mdi:water-boiler',
    }),
    'context': <ANY>,
    'entity_id': 'switch.gs01234_steam_boiler',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_steam_boiler_enable.1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.gs01234_steam_boiler',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water-boiler',
    'original_name': 'Steam boiler',
    'platform': 'lamarzocco',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'steam_boiler',
    'unique_id': 'GS01234_steam_boiler_enable',
    'unit_of_measurement': None,
  })
# ---
# name: test_steam_boiler_enable.2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'lamarzocco',
        'GS01234',
      ),
    }),
    'is_new': False,
    'manufacturer': 'La Marzocco',
    'model': 'GS3 AV',
    'name': 'GS01234',
    'name_by_user': None,
    'serial_number': 'GS01234',
    'suggested_area': None,
    'sw_version': '1.1',
    'via_device_id': None,
  })
# ---
